Fixed an issue with my map. Fixed some spacing issues. Finished my burger-menu.

--- a/css/events.css
+++ b/css/events.css
@@ -32,6 +32,10 @@ h4, p {
     color: var(--secondary);
 }
 
+#burgerMenu :nth-child(2) {
+    text-decoration: underline;
+}
+
 footer li:hover {
     color: #FBC117;
 }
