--- a/css/navbar.css
+++ b/css/navbar.css
@@ -111,7 +111,7 @@ nav {
 
     .navbar-icons {
         display: flex;
-        gap: 5rem;
+        gap: 4rem;
     }
 }
 
