--- a/css/school-trips.css
+++ b/css/school-trips.css
@@ -32,6 +32,10 @@ h4, p {
     color: var(--secondary);
 }
 
+#burgerMenu :nth-child(3) {
+    text-decoration: underline;
+}
+
 footer li:hover {
     color: #FBC117;
 }
